# Kommitter

./: Cargo.toml  README.md  config.json  lastkommit.txt
src/: main.rs
