[package]
name = "kommitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = "0.4.31"
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
